Fixes advanced search wooobling/poopping etc on Safari

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -541,31 +541,16 @@ border: 0;
         }
       }
 
-
-
+      .BookReader {
+        /* Allows Highlights in first page to show */
+        overflow:visible;
+      }
 
       /* TODO make it only for advanced-search-box */
       .views-exposed-form {
-        fieldset {
-          display: flex;
-          flex-direction: row;
-          justify-content: space-between;
-          align-self:stretch;
-          legend {
-            display: flex;
-          }
-        }
-        .fieldset-wrapper {
-          display:flex;
-          align-items: end;
-          column-gap: 1rem;
-          flex-basis: 100%;
-          .form-type-textfield {
-            flex-grow: 1;
-          }
-        }
-
         .form-row {
+          display: flex;
+          row-gap: 1rem;
           button:not(.form-submit) {
             align-self: self-start;
           }
@@ -574,8 +559,16 @@ border: 0;
           }
           div:first-child {
             padding-left: 0 !important;
+            margin-left: 0 !important;
           }
         }
+        .form-type-textfield {
+          flex-grow: 0;
+          min-height: 0;
+          height:100%;
+        }
+
+
         .form-actions.mb-3 {
           margin-bottom: 0 !important;
         }
@@ -678,14 +671,21 @@ border: 0;
         .views-exposed-form {
           .form-row {
             min-height: 0;
+            width: 100%;
             flex-flow: column;
             fieldset {
               min-height: 0;
               flex-direction: column !important;
             }
             .fieldset-wrapper {
+              display: flex;
+              column-gap: 1rem;
               label {
                 @extend .visually-hidden;
+              }
+              .js-form-item {
+                display: flex;
+                flex-grow: 1;
               }
             }
           }
@@ -698,10 +698,7 @@ border: 0;
       label {
         @extend .visually-hidden;
       }
-
-      display: inline-flex;
-      flex-basis: content;
-
+      display: flex;
       .form-item-sort-bef-combine {
         .form-select.bef-links {
           padding: 0;
@@ -720,7 +717,6 @@ border: 0;
           li {
             display: flex;
             flex-wrap: nowrap;
-
             a {
               border: 1px solid var(--bs-primary);
               color: var(--bs-body-color);
